[IMPR] - Improved Site-Order to prevent gaps and other faults. [IMPR] - Added Button to add Child-Page.

--- a/login/css/master.css
+++ b/login/css/master.css
@@ -230,7 +230,7 @@ div#menu li:hover span.menu-id {
 }
 
 #menu_list li a {
-    width: 217px;
+    width: 200px;
 }
 
 #menu_list li a i.edit {
@@ -244,6 +244,10 @@ div#menu li:hover span.menu-id {
     position: relative;
     top: 3px;
     margin-left: 4px;
+}
+
+#menu_list .addChild-Button {
+    width: 9px;
 }
 
 #menu_list li .dragger {
